syntax = "proto3";
package stream.v1;
option go_package=".;streampb";

service Greeter {
   
    //服务端流模式
    rpc ServerStream(StreamRequest) returns (stream StreamResponse);
    //客户端流模式
    rpc ClientStream(stream StreamRequest) returns (StreamResponse);
    //双向流模式
    rpc AllStreeam(stream StreamRequest) returns (stream StreamResponse);
}



message StreamRequest {
    string data = 1;
}


message StreamResponse {
    string data = 1 ;
}
